fix acf widget and accordion style collapsed

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6340,6 +6340,10 @@ body {
 
 /* Display
 --------------------------------------------- */
+.bt-d-none-ni {
+  display: none;
+}
+
 .bt-d-none {
   display: none !important;
 }
