--- a/sass/utilities/_display.scss
+++ b/sass/utilities/_display.scss
@@ -1,3 +1,8 @@
+// Without important
+.bt-d-none-ni {
+    display: none;
+}
+
 // Mobile
 .bt-d-none {
     display: none !important;
